Enhance laboratory report: update introduction, theoretical background, and laboratory setup sections; replace image and add new references

--- a/99_report/references.bib
+++ b/99_report/references.bib
@@ -31,3 +31,11 @@
   year =         1998,
   publisher =    {Helsinki University of Technology}
 }
+
+@misc{ACE_WT_Lab,
+  title        = {Advanced Control Engineering II -- Water Tank Laboratory},
+  author       = {Kronthaler, Phillip},
+  year         = {2025},
+  institution  = {Management Center Innsbruck},
+  note         = {Laboratory script}
+}
