Update bibliography entries and formatting in report files

--- a/99_report/Main-Report.tex
+++ b/99_report/Main-Report.tex
@@ -21,8 +21,9 @@ column-type  = one,                          % (one    | two)
 % there are other options on the market such as biber. Style has been chosen as IEEE but if 
 % are from another discipline, please feel free to change it.
 
-
-\bibliography{references.bib}  % Here we add our file where we store our references.
+\bibliography{references.bib} % Here we add our file where we store our references.
+%\addbibresource{references.bib}  
+%\renewcommand*{\bibfont}{\normalsize}
 %      
 % ---------------------------------------------------------------------------------------------
 
