--- a/99_report/references.bib
+++ b/99_report/references.bib
@@ -33,9 +33,10 @@
 }
 
 @misc{ACE_WT_Lab,
-  title        = {Advanced Control Engineering II -- Water Tank Laboratory},
+  title        = {{Advanced Control Engineering I -- Water Tank Laboratory}},
   author       = {Kronthaler, Phillip},
   year         = {2025},
   institution  = {Management Center Innsbruck},
-  note         = {Laboratory script}
+  note         = {Laboratory script},
 }
+
