Add labels for chapters and enhance figure captions for clarity in the report

--- a/99_report/Main-Report.tex
+++ b/99_report/Main-Report.tex
@@ -16,6 +16,8 @@ column-type  = one,                          % (one    | two)
 \usepackage{siunitx}
 \usepackage{csquotes}
 \pgfplotsset{compat=1.18}
+\usepackage{nameref}
+
 
 % --- reduce reserved header/footer space ---
 \setlength{\footskip}{8mm}
