Remove table of contents, figures, and tables from mcidoc.cls

--- a/99_report/mcidoc.cls
+++ b/99_report/mcidoc.cls
@@ -240,9 +240,9 @@ gemeinfrei.
 }
 
 \newcommand{\TableOfContents}{
-  \tableofcontents
-  \listoffigures
-  \listoftables
+  %\tableofcontents
+  %\listoffigures
+  %\listoftables
   % 
   \clearpage
   \pagenumbering{arabic}
@@ -465,8 +465,8 @@ autooneside  = false
 
 \newcommand{\TableOfContents}{
   \tableofcontents
-  \listoffigures
-  \listoftables
+  %\listoffigures
+  %\listoftables
   % 
   \clearpage
   \pagenumbering{arabic}
