--- a/99_report/Main-Report.tex
+++ b/99_report/Main-Report.tex
@@ -15,9 +15,10 @@ column-type  = one,                          % (one    | two)
 \usepackage[hidelinks]{hyperref}
 \usepackage{siunitx}
 \usepackage{csquotes}
+\usepackage{float}
+\usepackage{subcaption}
+\usepackage{graphicx}
 \pgfplotsset{compat=1.18}
-\usepackage{nameref}
-
 
 % --- reduce reserved header/footer space ---
 \setlength{\footskip}{8mm}
