Add lab date to report and update document class for consistency

--- a/99_report/Main-Report.tex
+++ b/99_report/Main-Report.tex
@@ -36,6 +36,7 @@ column-type  = one,                          % (one    | two)
 %      
 % ---------------------------------------------------------------------------------------------
 
+\newcommand{\SetLabDate}[1]{\LabDate={#1}}
 % DOCUMENT PARAMETERS -------------------------------------------------------------------------
 
 \TitleHeader{Laboratory Report 2}%   
@@ -45,7 +46,7 @@ column-type  = one,                          % (one    | two)
 }% 
 
 \Lecture{Advanced Control Engineering Laboratory}%    
-
+\LabDate{05. \& 11. December 2025} 
 \Lecturer{Dipl.-Ing. Dr. techn. Phillip Kronthaler}%
 
 \Cohort{MA-MECH-25-VZ}%           
